# jhc-components

./: Makefile  cabal.project  cross-build.nix  default.nix  mklibs.sh  stack.yaml
.github/workflows/: nix-ci.yml
HsSyck-0.53/: HsSyck.cabal
HsSyck-0.53/syck/: gram.c
jhc-app/: jhc-app.cabal
jhc-app/src/: Interactive.hs
jhc-common/: jhc-common.cabal
jhc-common/embed/: jhc_rts_header.h
jhc-common/src/: GenUtil.hs  Options.hs  PackedString.hs  Stats.hs
jhc-common/src/C/: Prims.hs
jhc-common/src/Cmm/: Number.hs  Op.hs
jhc-common/src/Doc/: DocLike.hs  Pretty.hs
jhc-common/src/Fixer/: Fixer.hs  VMap.hs
jhc-common/src/Info/: Info.hs  Types.hs
jhc-common/src/Name/: Binary.hs  Id.hs  Name.hs  VConsts.hs
jhc-common/src/StringTable/: Atom.hsc
jhc-common/src/Support/: CFF.hs  CanType.hs  IniParse.hs
jhc-common/src/Util/: BitSet.hs  ContextMonad.hs  Fail.hs  Gen.hs  Inst.hs  IntBag.hs  NameMonad.hs  Perhaps.hs  RWS.hs  ReaderWriter.hs  Seq.hs  UnionSolve.hs  UniqueMonad.hs  VarName.hs  YAML.hs
jhc-compat/: jhc-compat.cabal
jhc-compat/haskell98/: Monad.hs  Random.hs  System.hs
jhc-core/: cabal.project  jhc-core.cabal
jhc-core/src/: DataConstructors.hs  DataConstructors.hs-boot
jhc-core/src/E/: Annotate.hs  Binary.hs  CPR.hs  Demand.hs  Diff.hs  E.hs  Eval.hs  FromHs.hs  Program.hs  Rules.hs  SSimplify.hs  Show.hs  Traverse.hs  TypeAnalysis.hs  TypeCheck.hs  WorkerWrapper.hs
jhc-core/src/FrontEnd/Tc/: Module.hs
jhc-core/src/Ho/: Binary.hs  Collected.hs  Library.hs  Type.hs
jhc-core/src/Info/: Binary.hs
jhc-frontend/: jhc-frontend.cabal
jhc-frontend/src/: FindFixpoint.hs
jhc-frontend/src/DerivingDrift/: Drift.hs  RuleUtils.hs
jhc-frontend/src/FrontEnd/: Class.hs  Diagnostic.hs  Exports.hs  HsPretty.hs  Infix.hs  KindInfer.hs  Rename.hs  Representation.hs  SrcLoc.hs  TypeSynonyms.hs  Warning.hs
jhc-frontend/src/FrontEnd/Lex/: Fixity.hs  Lexer.x  ParseMonad.hs  Post.hs
jhc-frontend/src/FrontEnd/Syn/: Traverse.hs
jhc-frontend/src/FrontEnd/Tc/: Class.hs  Kind.hs  Monad.hs  Type.hs
jhc-frontend/src/Util/: Relation.hs
jhc-grin/: jhc-grin.cabal
jhc-grin/src/C/: FromGrin2.hs  Generate.hs
jhc-grin/src/Grin/: DeadCode.hs  EvalInline.hs  FromE.hs  Grin.hs  Lint.hs  Noodle.hs  Optimize.hs  SSimplify.hs  Show.hs  Val.hs  Whiz.hs
regress/: regress.prl
