name:                jhc-app
version:             0.1.0.0
synopsis:            jhc compiler application
--description:
license:             BSD3
license-file:        LICENSE
author:              John Meacham
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable jhc
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell98

  other-modules:
    Interactive
    Util.Interact

  build-depends:
    base         ,
    directory    ,
    filepath     ,
    bytestring   ,
    mtl          ,
    containers   ,
    pretty       ,
    process      ,
    regex-compat ,

    jhc-compat   == 0.1.0.*,
    jhc-common   == 0.1.0.*,
    jhc-frontend == 0.1.0.*,
    jhc-core     == 0.1.0.*,
    jhc-grin     == 0.1.0.*

  include-dirs: .

  default-extensions:
      BangPatterns, TypeFamilies, ViewPatterns, UndecidableInstances,
      OverlappingInstances, RecordWildCards, RecursiveDo, TupleSections,
      ParallelListComp, GeneralizedNewtypeDeriving, ScopedTypeVariables,
      FlexibleInstances, TypeSynonymInstances, MultiParamTypeClasses,
      DeriveDataTypeable, NoMonoLocalBinds, NamedFieldPuns,
      ForeignFunctionInterface, UnliftedFFITypes, ImplicitParams,
      UnboxedTuples, StandaloneDeriving, DeriveFunctor, DeriveFoldable,
      DeriveTraversable, FlexibleContexts,
      ConstrainedClassMethods, FunctionalDependencies, MagicHash,
      PolymorphicComponents, ExistentialQuantification, UnicodeSyntax,
      PostfixOperators, PatternGuards, LiberalTypeSynonyms, RankNTypes,
      TypeOperators, EmptyDataDecls, KindSignatures, DeriveGeneric
