name:                jhc-common
version:             0.1.0.0
synopsis:            jhc compiler foundation library
--description:
license:             BSD3
license-file:        LICENSE
author:              John Meacham
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

extra-source-files:
  src/StringTable/StringTable_cbits.h
  src/StringTable/StringTable_cbits.c
  hs_src_config.h

library
  exposed-modules:
    Cmm.Number
    Cmm.Op

    StringTable.Atom

    Name.Binary
    Name.Id
    Name.Internals
    Name.Name
    Name.Names
    Name.Prim
    Name.VConsts

    Info.Info
    Info.Properties
    Info.Types

    C.FFI
    C.Prims

    Doc.Chars
    Doc.DocLike
    Doc.Pretty
    Doc.PPrint

    GenUtil

    Util.BitSet
    Util.ContextMonad
    Util.ExitCodes
    Util.Gen
    Util.GMap
    Util.Graph
    Util.Graphviz
    Util.HasSize
    Util.Inst
    Util.IntBag
    Util.NameMonad
    Util.Once
    Util.Perhaps
    Util.Progress
    Util.ReaderWriter
    Util.RWS
    Util.SameShape
    Util.Seq
    Util.SetLike
    Util.Std
    Util.UnionFind
    Util.UnionSolve
    Util.UniqueMonad
    Util.VarName
    Util.YAML
    Util.Fail

    Ty.Level

    Support.CanType
    Support.CFF
    Support.Compat
    Support.FreeVars
    Support.IniParse
    Support.MapBinaryInstance
    Support.MD5
    Support.TempDir
    Support.Tickle
    Support.Transform
    Support.Tuple
    Support.Unparse

    PackedString

    Options
    RawFiles

    Stats

    FlagDump
    FlagOpts

    Version.Config
    Version.Version

    Fixer.Fixer
    Fixer.Supply
    Fixer.VMap


  build-depends:
    array       , 
    base        ,
    binary      ,
    bytestring  ,
    containers  ,
    directory   ,
    fgl         ,
    file-embed  ,
    filepath    ,
    mtl         ,
    pretty      ,
    syb         ,
    transformers,
    unix        ,
    utf8-string ,

    jhc-compat   == 0.1.0.*

  hs-source-dirs:      src
  default-language:    Haskell98

  build-tools:         hsc2hs

  include-dirs:        . src/StringTable cbits
  c-sources:           src/StringTable/StringTable_cbits.c
                       cbits/lookup3.c
                       cbits/md5sum.c

  default-extensions:
      BangPatterns, TypeFamilies, ViewPatterns, UndecidableInstances,
      RecordWildCards, RecursiveDo, TupleSections,
      ParallelListComp, GeneralizedNewtypeDeriving, ScopedTypeVariables,
      FlexibleInstances, TypeSynonymInstances, MultiParamTypeClasses,
      DeriveDataTypeable, NoMonoLocalBinds, NamedFieldPuns,
      ForeignFunctionInterface, UnliftedFFITypes, ImplicitParams,
      UnboxedTuples, StandaloneDeriving, DeriveFunctor, DeriveFoldable,
      DeriveTraversable, FlexibleContexts,
      ConstrainedClassMethods, FunctionalDependencies, MagicHash,
      PolymorphicComponents, ExistentialQuantification, UnicodeSyntax,
      PostfixOperators, PatternGuards, LiberalTypeSynonyms, RankNTypes,
      TypeOperators, EmptyDataDecls, KindSignatures, DeriveGeneric
